# tensorflow-jupyter

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  readme.md
app/: pyproject.toml
app/data/: readme.md
app/notebooks/: index.ipynb
