[tool.poetry]
name = "tensorflow-template"
version = "0.1.0"
description = "A GPU accelerated tensorflow template"
authors = ["Auxority"]
license = "MIT"
packages = [{include = "tensorflow_template"}]

[tool.poetry.dependencies]
python = "^3.8.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
